правки в хедере мобилки

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <span class="web">Web</span>Studio
                 </a>
                 <!-- Кнопка моб.меню -->
-                <button type="button" class="menu-button is-open"
+                <button type="button" class="menu-button"
                  aria-expanded="false"
                  data-menu-button>
                     <svg class="icon-list"
@@ -34,7 +34,7 @@
                     </svg>
                 </button>
 
-                <div class="header-list">
+                <div class="header-list" data-menu>
                     <ul class="navigation_list">
                         <li class="navigation_list-item">
                             <a class="navigation_list-link current-nav-link" href="./index.html">Студия</a>
