--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     </footer>
     
     <!-- Модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="close-btn" data-modal-close>
                 <svg width="18" height="18">
@@ -522,7 +522,7 @@
             </form>
         </div>
     </div> -->
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
    
 </body>
