правки в портфолио на таблетку

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,8 @@
                 <ul class="portfolio-cards-list" >
                     <li class="portfolio-list"> 
                              <a href="" class="photo-transition">
-                                <div class="position-img"> <img src="./images/portfolio/img1.jpg" width="370" height="294"
+                                <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-1.jpg 1x, ./images/portfolio/portfolio-mobile-1@2x.jpg 2x"
+                                     img src="./images/portfolio/img1.jpg" 
                                         alt="ноутбук с открытой страницей">
                                     <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового
@@ -114,7 +115,7 @@
 
                     <li class="portfolio-list">
                     <a href="" class="photo-transition">
-                            <div class="position-img"> <img src="./images/portfolio/img2.jpg" width="370" height="294"
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-2.jpg 1x, ./images/portfolio/portfolio-mobile-2@2x.jpg 2x"  img src="./images/portfolio/img2.jpg"
                                     alt="постер с двумя баскетболистами">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -130,7 +131,7 @@
 
                     <li class="portfolio-list">
                     <a href="" class="photo-transition">
-                        <div class="position-img"> <img src="./images/portfolio/img3.jpg" width="370" height="294"
+                        <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-3.jpg 1x, ./images/portfolio/portfolio-mobile-3@2x.jpg 2x"  img src="./images/portfolio/img3.jpg"
                                 alt="логотип рыбного ресторана">
                             <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -145,7 +146,8 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img src="./images/portfolio/img4.jpg" width="370" height="294" alt="наушники">
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-4.jpg 1x, ./images/portfolio/portfolio-mobile-4@2x.jpg 2x"  img src="./images/portfolio/img4.jpg" 
+                                alt="наушники">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -159,7 +161,7 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img src="./images/portfolio/img5.jpg" width="370" height="294" alt="две коробки">
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-5.jpg 1x, ./images/portfolio/portfolio-mobile-5@2x.jpg 2x"  img src="./images/portfolio/img5.jpg" alt="две коробки">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -173,7 +175,8 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img src="./images/portfolio/img6.jpg" width="370" height="294" alt="монитор">
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-6.jpg 1x, ./images/portfolio/portfolio-mobile-6@2x.jpg 2x"  img src="./images/portfolio/img6.jpg"
+                                alt="монитор">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -187,7 +190,8 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"><img src="./images/portfolio/img7.jpg" width="370" height="294" alt="открытый журнал">
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-7.jpg 1x, ./images/portfolio/portfolio-mobile-7@2x.jpg 2x"  img src="./images/portfolio/img7.jpg"
+                                alt="открытый журнал">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -201,7 +205,8 @@
                     </li>
                     <li class="portfolio-list">
                        <a href="" class="photo-transition">
-                            <div class="position-img"><img src="./images/portfolio/img8.jpg" width="370" height="294" alt="бирка">
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-8.jpg 1x, ./images/portfolio/portfolio-mobile-8@2x.jpg 2x"  img src="./images/portfolio/img8.jpg"
+                                alt="бирка">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -216,14 +221,14 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"><img src="./images/portfolio/img9.jpg" width="370" height="294"
-                                    alt="руки человека печатают на ноутбуке">
+                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-9.jpg 1x, ./images/portfolio/portfolio-mobile-9@2x.jpg 2x"  img src="./images/portfolio/img9.jpg"
+                                alt="руки человека печатают на ноутбуке">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
                                 </p>
                             </div>
-                            <div>
+                            <div class="portfolio-border">
                                 <h2 class="portfolio-title">Growing Business</h2>
                                 <p class="portfolio-description">Приложения</p>
                             </div>
