--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                 <ul class="portfolio-cards-list" >
                     <li class="portfolio-list"> 
                              <a href="" class="photo-transition">
-                                <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-1.jpg 1x, ./images/portfolio/portfolio-mobile-1@2x.jpg 2x"
+                                <div class="position-img"> <img srcset="./images/portfolio/nout.jpg 1x, ./images/portfolio/noutx2.jpg 2x"
                                      img src="./images/portfolio/img1.jpg" 
                                         alt="ноутбук с открытой страницей">
                                     <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -115,7 +115,7 @@
 
                     <li class="portfolio-list">
                     <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-2.jpg 1x, ./images/portfolio/portfolio-mobile-2@2x.jpg 2x"  img src="./images/portfolio/img2.jpg"
+                            <div class="position-img"> <img srcset="./images/portfolio/baice.jpg 1x, ./images/portfolio/baicex2.jpg 2x"  img src="./images/portfolio/img2.jpg"
                                     alt="постер с двумя баскетболистами">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -131,7 +131,7 @@
 
                     <li class="portfolio-list">
                     <a href="" class="photo-transition">
-                        <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-3.jpg 1x, ./images/portfolio/portfolio-mobile-3@2x.jpg 2x"  img src="./images/portfolio/img3.jpg"
+                        <div class="position-img"> <img srcset="./images/portfolio/seafood.jpg 1x, ./images/portfolio/seafoodx2.jpg 2x"  img src="./images/portfolio/img3.jpg"
                                 alt="логотип рыбного ресторана">
                             <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -146,7 +146,7 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-4.jpg 1x, ./images/portfolio/portfolio-mobile-4@2x.jpg 2x"  img src="./images/portfolio/img4.jpg" 
+                            <div class="position-img"> <img srcset="./images/portfolio/nau.jpg 1x, ./images/portfolio/naux2.jpg 2x"  img src="./images/portfolio/img4.jpg" 
                                 alt="наушники">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -161,7 +161,7 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-5.jpg 1x, ./images/portfolio/portfolio-mobile-5@2x.jpg 2x"  img src="./images/portfolio/img5.jpg" alt="две коробки">
+                            <div class="position-img"> <img srcset="./images/portfolio/block.jpg 1x, ./images/portfolio/blockx2.jpg 2x"  img src="./images/portfolio/img5.jpg" alt="две коробки">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.
@@ -175,7 +175,7 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-6.jpg 1x, ./images/portfolio/portfolio-mobile-6@2x.jpg 2x"  img src="./images/portfolio/img6.jpg"
+                            <div class="position-img"> <img srcset="./images/portfolio/mon.jpg 1x, ./images/portfolio/monx2.jpg 2x"  img src="./images/portfolio/img6.jpg"
                                 alt="монитор">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -190,7 +190,7 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-7.jpg 1x, ./images/portfolio/portfolio-mobile-7@2x.jpg 2x"  img src="./images/portfolio/img7.jpg"
+                            <div class="position-img"> <img srcset="./images/portfolio/book.jpg 1x, ./images/portfolio/bookx2.jpg 2x"  img src="./images/portfolio/img7.jpg"
                                 alt="открытый журнал">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -205,7 +205,7 @@
                     </li>
                     <li class="portfolio-list">
                        <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-8.jpg 1x, ./images/portfolio/portfolio-mobile-8@2x.jpg 2x"  img src="./images/portfolio/img8.jpg"
+                            <div class="position-img"> <img srcset="./images/portfolio/bir.jpg 1x, ./images/portfolio/birx2.jpg 2x"  img src="./images/portfolio/img8.jpg"
                                 alt="бирка">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -221,7 +221,7 @@
                     </li>
                     <li class="portfolio-list">
                         <a href="" class="photo-transition">
-                            <div class="position-img"> <img srcset="./images/portfolio/portfolio-mobile-9.jpg 1x, ./images/portfolio/portfolio-mobile-9@2x.jpg 2x"  img src="./images/portfolio/img9.jpg"
+                            <div class="position-img"> <img srcset="./images/portfolio/hand.jpg 1x, ./images/portfolio/handx2.jpg 2x"  img src="./images/portfolio/img9.jpg"
                                 alt="руки человека печатают на ноутбуке">
                                 <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
