--- a/portfolio.html
+++ b/portfolio.html
@@ -97,8 +97,7 @@
                 <ul class="portfolio-cards-list" >
                     <li class="portfolio-list"> 
                              <a href="" class="photo-transition">
-                                <div class="position-img"> <img srcset="./images/portfolio/nout.jpg 1x, ./images/portfolio/noutx2.jpg 2x"
-                                     img src="./images/portfolio/img1.jpg" 
+                                <div class="position-img"> <img srcset="./images/portfolio/nout.jpg 1x, ./images/portfolio/noutx2.jpg 2x" img src="./images/portfolio/img1.jpg" 
                                         alt="ноутбук с открытой страницей">
                                     <p class="position-card">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                         платформу для цифрового
