--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <button type="submit" class="modal-form-button">Отправить</button>
             </form>
         </div>
-    </div> -->
+    </div> 
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
    
